REFACTOR: warnings 제거: .collect(Collectors.toList()) > .toList()로 변경